ui_test/parser/fail/visibility.camp
pub(pub site) fn foo() {}